<resources>
    <string name="app_name">MFX G</string>
    <string name="lesson_text">Casharada</string>
    <string name="signal_text">Signals</string>
    <string name="toolbar_title">Somali Forex</string>
    <string name="add_lessons">Add Lessons</string>
    <string name="add_signals">Add Signals</string>
    <string name="admin">Admin Page</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="submit_btn">Login</string>
    <string name="pairs">Enter pair</string>
    <string name="entry">Enter entry price</string>
    <string name="profit">Enter take profit</string>
    <string name="stop_loss">Enter Stop loss</string>
    <string name="submit_signal">Submit</string>
    <string name="signal">Enter signal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
