<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddSignalsActivity"
    android:background="@android:color/black">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/barText"
            android:text="@string/add_signals"
            android:layout_marginLeft="40dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adminCard"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@color/colorPrimary"
        android:layout_below="@+id/toolbar" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pair"
                android:hint="@string/pairs"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/siganl"
                android:hint="@string/signal"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/pair"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/entry"
                android:hint="@string/entry"
                android:layout_below="@+id/siganl"
                android:layout_marginTop="15dp"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/takeProfit"
                android:hint="@string/profit"
                android:layout_below="@+id/entry"
                android:layout_marginTop="15dp"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stopLoss"
                android:hint="@string/stop_loss"
                android:layout_below="@+id/takeProfit"
                android:layout_marginTop="15dp"
                android:inputType="numberDecimal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signalBtn"
                android:text="@string/submit_signal"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/btn_round"
                android:layout_below="@+id/stopLoss"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>